--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "node-sass": "^8.0.0",
     "npm": "^9.2.0",
     "react": "^18.2.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-simple-animate": "^3.5.2",
+    "react-transitions": "^1.0.0",
     "react-type-animation": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
