--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.15.0",
     "framer-motion": "^8.2.4",
     "i": "^0.3.7",
     "node-sass": "^8.0.0",
@@ -15,8 +16,10 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-simple-animate": "^3.5.2",
+    "react-transition-group": "^4.4.5",
     "react-transitions": "^1.0.0",
     "react-type-animation": "^2.1.2",
+    "rodal": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
