--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "classnames": "^2.3.2",
     "firebase": "^9.15.0",
     "framer-motion": "^8.2.4",
     "i": "^0.3.7",
@@ -14,12 +16,14 @@
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-simple-animate": "^3.5.2",
     "react-transition-group": "^4.4.5",
     "react-transitions": "^1.0.0",
     "react-type-animation": "^2.1.2",
     "rodal": "^2.0.1",
+    "text-type-animation-effect-react": "^1.2.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
